best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -13,38 +13,6 @@
 <script src='https://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js'></script>
 <script src='/html/asset/common.js'></script>
 <script src='/yaoliuyao/html/asset/common.js'></script>
-<script>
-  window.MathJax = {
-    tex: {
-      ams: {
-        multlineWidth: '85%'
-      },
-      tags: 'ams',
-      tagSide: 'right',
-      tagIndent: '.8em'
-    },
-    chtml: {
-      scale: 1.0,
-      displayAlign: 'center',
-      displayIndent: '0em'
-    },
-    svg: {
-      scale: 1.0,
-      displayAlign: 'center',
-      displayIndent: '0em'
-    },
-    output: {
-      font: 'mathjax-modern',
-      displayOverflow: 'overflow'
-    }
-  };
-</script>
-
-<script
-  id="MathJax-script"
-  async
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-</script>
 </head>
 <body>
 <div id="content" class="content">
@@ -54,14 +22,14 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0c9d722">1. Records</a></li>
+<li><a href="#orgfb8bc52">1. 测验结果</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-org0c9d722" class="outline-2">
-<h2 id="org0c9d722"><span class="section-number-2">1.</span> Records</h2>
+<section id="outline-container-orgfb8bc52" class="outline-2">
+<h2 id="orgfb8bc52"><span class="section-number-2">1.</span> 测验结果</h2>
 <div class="outline-text-2" id="text-1">
 <table>
 
@@ -74,7 +42,7 @@
 <thead>
 <tr>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right">1.hello.txt\n完成从创建文件、编译到运行的整个过程</th>
+<th scope="col" class="org-right">2023-09-06</th>
 </tr>
 </thead>
 <tbody>
@@ -294,6 +262,13 @@
 </tr>
 </tbody>
 </table>
+
+<p>
+任务详情:
+</p>
+<ul class="org-ul">
+<li>2023-09-06: 1.hello.txt, 完成从创建文件、编译到运行的整个过程</li>
+</ul>
 </div>
 </section>
 </div>
