best_try_and_best_chance

--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-06 -->
+<!-- 2023-09-07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>C♯ 语言</title>
@@ -27,6 +27,7 @@
 </div>
 </nav>
 
+
 <section id="outline-container-org7cf233b" class="outline-2">
 <h2 id="org7cf233b"><span class="section-number-2">1.</span> 基本规则</h2>
 <div class="outline-text-2" id="text-1">
@@ -35,7 +36,7 @@
 </p>
 
 
-<figure id="orge386185">
+<figure id="org3376eee">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
@@ -44,7 +45,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-06</p>
+<p class="date">Created: 2023-09-07</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
