best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -171,6 +171,11 @@
 </tr>
 
 <tr>
+<td class="org-left">周远龙</td>
+<td class="org-right">26</td>
+</tr>
+
+<tr>
 <td class="org-left">何锦晖</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -187,11 +192,6 @@
 
 <tr>
 <td class="org-left">曾宏燊</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">周远龙</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
