best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -176,6 +176,51 @@
 </tr>
 
 <tr>
+<td class="org-left">王俊杰</td>
+<td class="org-right">27</td>
+</tr>
+
+<tr>
+<td class="org-left">曾翔</td>
+<td class="org-right">28</td>
+</tr>
+
+<tr>
+<td class="org-left">江金涛</td>
+<td class="org-right">29</td>
+</tr>
+
+<tr>
+<td class="org-left">陈翕</td>
+<td class="org-right">30</td>
+</tr>
+
+<tr>
+<td class="org-left">黄军帮</td>
+<td class="org-right">31</td>
+</tr>
+
+<tr>
+<td class="org-left">刘天宇</td>
+<td class="org-right">32</td>
+</tr>
+
+<tr>
+<td class="org-left">吴嘉城</td>
+<td class="org-right">33</td>
+</tr>
+
+<tr>
+<td class="org-left">夏志豪</td>
+<td class="org-right">34</td>
+</tr>
+
+<tr>
+<td class="org-left">林显诚</td>
+<td class="org-right">35</td>
+</tr>
+
+<tr>
 <td class="org-left">何锦晖</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -192,11 +237,6 @@
 
 <tr>
 <td class="org-left">曾宏燊</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">林显诚</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -241,47 +281,7 @@
 </tr>
 
 <tr>
-<td class="org-left">黄军帮</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">刘天宇</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">吴嘉城</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-left">韦代帅</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">夏志豪</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">曾翔</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">王俊杰</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">江金涛</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">陈翕</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -291,6 +291,7 @@
 </tr>
 </tbody>
 </table>
+
 
 <p>
 任务备注:
