best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -221,6 +221,56 @@
 </tr>
 
 <tr>
+<td class="org-left">周枫</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">曾宏燊</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">肖峰</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">左亮</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">符文财</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">谢鹤鸣</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">邓炜祺</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">韦代帅</td>
+<td class="org-right">q</td>
+</tr>
+
+<tr>
+<td class="org-left">郭小龙</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">车斌涛</td>
+<td class="org-right">&#xa0;</td>
+</tr>
+
+<tr>
 <td class="org-left">何锦晖</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -231,57 +281,7 @@
 </tr>
 
 <tr>
-<td class="org-left">周枫</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">曾宏燊</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">肖峰</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">左亮</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">符文财</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">郭小龙</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">谢鹤鸣</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">邓炜祺</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">车斌涛</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-left">刘仁杰</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">韦代帅</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
