best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-06 -->
+<!-- 2023-09-07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 192</title>
@@ -37,228 +37,228 @@
 <colgroup>
 <col  class="org-left">
 
-<col  class="org-right">
+<col  class="org-left">
 </colgroup>
 <thead>
 <tr>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-right">2023-09-06</th>
+<th scope="col" class="org-left">2023-09-06</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td class="org-left">李吉</td>
-<td class="org-right">1</td>
+<td class="org-left">1</td>
 </tr>
 
 <tr>
 <td class="org-left">段文潇</td>
-<td class="org-right">2</td>
+<td class="org-left">2</td>
 </tr>
 
 <tr>
 <td class="org-left">余海中</td>
-<td class="org-right">3</td>
+<td class="org-left">3</td>
 </tr>
 
 <tr>
 <td class="org-left">谭鑫</td>
-<td class="org-right">4</td>
+<td class="org-left">4</td>
 </tr>
 
 <tr>
 <td class="org-left">高旻昱</td>
-<td class="org-right">5</td>
+<td class="org-left">5</td>
 </tr>
 
 <tr>
 <td class="org-left">麦天河</td>
-<td class="org-right">6</td>
+<td class="org-left">6</td>
 </tr>
 
 <tr>
 <td class="org-left">许焕圣</td>
-<td class="org-right">7</td>
+<td class="org-left">7</td>
 </tr>
 
 <tr>
 <td class="org-left">何华为</td>
-<td class="org-right">8</td>
+<td class="org-left">8</td>
 </tr>
 
 <tr>
 <td class="org-left">王海波</td>
-<td class="org-right">9</td>
+<td class="org-left">9</td>
 </tr>
 
 <tr>
 <td class="org-left">肖义珥</td>
-<td class="org-right">10</td>
+<td class="org-left">10</td>
 </tr>
 
 <tr>
 <td class="org-left">刘广鸿</td>
-<td class="org-right">11</td>
+<td class="org-left">11</td>
 </tr>
 
 <tr>
 <td class="org-left">刘翔</td>
-<td class="org-right">12</td>
+<td class="org-left">12</td>
 </tr>
 
 <tr>
 <td class="org-left">段文锋</td>
-<td class="org-right">13</td>
+<td class="org-left">13</td>
 </tr>
 
 <tr>
 <td class="org-left">刘虹佑</td>
-<td class="org-right">14</td>
+<td class="org-left">14</td>
 </tr>
 
 <tr>
 <td class="org-left">张甘霖</td>
-<td class="org-right">15</td>
+<td class="org-left">15</td>
 </tr>
 
 <tr>
 <td class="org-left">李岳元</td>
-<td class="org-right">16</td>
+<td class="org-left">16</td>
 </tr>
 
 <tr>
 <td class="org-left">段京文</td>
-<td class="org-right">17</td>
+<td class="org-left">17</td>
 </tr>
 
 <tr>
 <td class="org-left">古远东</td>
-<td class="org-right">18</td>
+<td class="org-left">18</td>
 </tr>
 
 <tr>
 <td class="org-left">黄可彬</td>
-<td class="org-right">19</td>
-</tr>
-
-<tr>
-<td class="org-left">叶宇</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">卢德涛</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">岑法政</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">张桂毓</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">陆宇轩</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">何晓东</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">刘泽泉</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">周永久</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">郭榕荣</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">陈梓鑫</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">谢晓中</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">薛进超</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">吴幸林</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">韦金良</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">唐景富</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">19</td>
 </tr>
 
 <tr>
 <td class="org-left">苏大明</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">-</td>
 </tr>
 
 <tr>
 <td class="org-left">沈艺宏</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">饶展源</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">梁泽文</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">-</td>
 </tr>
 
 <tr>
 <td class="org-left">李泽俊</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">-</td>
 </tr>
 
 <tr>
 <td class="org-left">李耀武</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
+<td class="org-left">刘泽泉</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
+<td class="org-left">吴幸林</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
+<td class="org-left">唐景富</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
+<td class="org-left">叶宇</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">卢德涛</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">岑法政</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">张桂毓</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">陆宇轩</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">何晓东</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">周永久</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">郭榕荣</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">陈梓鑫</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">谢晓中</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">薛进超</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">韦金良</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">饶展源</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">梁泽文</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">黄飞超</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">贝俊霖</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">陈颖聪</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 </tbody>
 </table>
@@ -274,7 +274,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-06</p>
+<p class="date">Created: 2023-09-07</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
