best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -212,6 +212,21 @@
 </tr>
 
 <tr>
+<td class="org-left">陈梓鑫</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
+<td class="org-left">梁泽文</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
+<td class="org-left">黄飞超</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
 <td class="org-left">张桂毓</td>
 <td class="org-left">&#xa0;</td>
 </tr>
@@ -232,27 +247,12 @@
 </tr>
 
 <tr>
-<td class="org-left">陈梓鑫</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-left">谢晓中</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">薛进超</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">梁泽文</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">黄飞超</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
