best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -227,6 +227,11 @@
 </tr>
 
 <tr>
+<td class="org-left">周永久</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
 <td class="org-left">张桂毓</td>
 <td class="org-left">&#xa0;</td>
 </tr>
@@ -238,11 +243,6 @@
 
 <tr>
 <td class="org-left">何晓东</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">周永久</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
