best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -233,7 +233,17 @@
 
 <tr>
 <td class="org-left">张桂毓</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
+<td class="org-left">何晓东</td>
+<td class="org-left">-</td>
+</tr>
+
+<tr>
+<td class="org-left">薛进超</td>
+<td class="org-left">-</td>
 </tr>
 
 <tr>
@@ -242,17 +252,7 @@
 </tr>
 
 <tr>
-<td class="org-left">何晓东</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-left">谢晓中</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">薛进超</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
