best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -46,6 +46,46 @@
 </thead>
 <tbody>
 <tr>
+<td class="org-left">陈嘉鹏</td>
+<td class="org-right">1</td>
+</tr>
+
+<tr>
+<td class="org-left">廖哲</td>
+<td class="org-right">2</td>
+</tr>
+
+<tr>
+<td class="org-left">刘宁</td>
+<td class="org-right">3</td>
+</tr>
+
+<tr>
+<td class="org-left">秦铭杉</td>
+<td class="org-right">4</td>
+</tr>
+
+<tr>
+<td class="org-left">黄佳鹏</td>
+<td class="org-right">5</td>
+</tr>
+
+<tr>
+<td class="org-left">覃宇江</td>
+<td class="org-right">6</td>
+</tr>
+
+<tr>
+<td class="org-left">唐瑞钦</td>
+<td class="org-right">7</td>
+</tr>
+
+<tr>
+<td class="org-left">曾世强</td>
+<td class="org-right">8</td>
+</tr>
+
+<tr>
 <td class="org-left">刘燃东</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -72,26 +112,6 @@
 
 <tr>
 <td class="org-left">李境松</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">廖哲</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">秦铭杉</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">曾世强</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">刘宁</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -127,11 +147,6 @@
 
 <tr>
 <td class="org-left">刘志豪</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">覃宇江</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
