best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -86,6 +86,11 @@
 </tr>
 
 <tr>
+<td class="org-left">魏智锋</td>
+<td class="org-right">9</td>
+</tr>
+
+<tr>
 <td class="org-left">刘燃东</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -102,11 +107,6 @@
 
 <tr>
 <td class="org-left">林宝荣</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">魏智锋</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
