best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -92,7 +92,32 @@
 
 <tr>
 <td class="org-left">刘燃东</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">10</td>
+</tr>
+
+<tr>
+<td class="org-left">陈述亮</td>
+<td class="org-right">11</td>
+</tr>
+
+<tr>
+<td class="org-left">李境松</td>
+<td class="org-right">12</td>
+</tr>
+
+<tr>
+<td class="org-left">刘志豪</td>
+<td class="org-right">13</td>
+</tr>
+
+<tr>
+<td class="org-left">韦海永</td>
+<td class="org-right">14</td>
+</tr>
+
+<tr>
+<td class="org-left">叶子超</td>
+<td class="org-right">15</td>
 </tr>
 
 <tr>
@@ -101,22 +126,7 @@
 </tr>
 
 <tr>
-<td class="org-left">韦海永</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-left">林宝荣</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">李境松</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">陈述亮</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -137,16 +147,6 @@
 
 <tr>
 <td class="org-left">张翔宇</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">叶子超</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">刘志豪</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
