best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -121,6 +121,21 @@
 </tr>
 
 <tr>
+<td class="org-left">张翔宇</td>
+<td class="org-right">16</td>
+</tr>
+
+<tr>
+<td class="org-left">吴志挥</td>
+<td class="org-right">17</td>
+</tr>
+
+<tr>
+<td class="org-left">陈子健</td>
+<td class="org-right">18</td>
+</tr>
+
+<tr>
 <td class="org-left">岑宇森</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -136,22 +151,7 @@
 </tr>
 
 <tr>
-<td class="org-left">陈子健</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-left">刁扬春</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">张翔宇</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">吴志挥</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
