best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -136,6 +136,16 @@
 </tr>
 
 <tr>
+<td class="org-left">潘嘉豪</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">朱荣如</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
 <td class="org-left">岑宇森</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -152,16 +162,6 @@
 
 <tr>
 <td class="org-left">刁扬春</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">潘嘉豪</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">朱荣如</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 </tbody>
