--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -136,6 +136,11 @@
 </tr>
 
 <tr>
+<td class="org-left">刁扬春</td>
+<td class="org-right">19</td>
+</tr>
+
+<tr>
 <td class="org-left">潘嘉豪</td>
 <td class="org-right">-</td>
 </tr>
@@ -157,11 +162,6 @@
 
 <tr>
 <td class="org-left">曾凯</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">刁扬春</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 </tbody>
