best_try_and_best_chance

--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-07 -->
+<!-- 2023-09-12 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>C♯ 语言</title>
@@ -36,16 +36,26 @@
 </p>
 
 
-<figure id="org3376eee">
+<figure id="org1c68c1b">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
+
+<p>
+基本步骤:
+</p>
+<ul class="org-ul">
+<li>创建源文件 (文本文档，适合人类阅读)</li>
+<li>编码 (写入符合规则的内容，C# 语法)</li>
+<li>编译 (使用 csc 在命令行下进行)</li>
+<li>运行 (机器文件，内含指令代码和各种二进制数据)</li>
+</ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-07</p>
+<p class="date">Created: 2023-09-12</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
