best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-07 -->
+<!-- 2023-09-13 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -257,7 +257,7 @@
 
 <tr>
 <td class="org-left">韦代帅</td>
-<td class="org-right">q</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
@@ -304,7 +304,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-07</p>
+<p class="date">Created: 2023-09-13</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
