--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-07 -->
+<!-- 2023-09-13 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 192</title>
@@ -22,15 +22,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgfb8bc52">1. 测验结果</a></li>
+<li><a href="#orgd521cff">1. 班级信息</a></li>
+<li><a href="#orgfb8bc52">2. 测验结果</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-orgfb8bc52" class="outline-2">
-<h2 id="orgfb8bc52"><span class="section-number-2">1.</span> 测验结果</h2>
+<section id="outline-container-orgd521cff" class="outline-2">
+<h2 id="orgd521cff"><span class="section-number-2">1.</span> 班级信息</h2>
 <div class="outline-text-2" id="text-1">
+<ul class="org-ul">
+<li>班主任: 朱良斌</li>
+<li>课代表: 许焕圣</li>
+</ul>
+</div>
+</section>
+
+<section id="outline-container-orgfb8bc52" class="outline-2">
+<h2 id="orgfb8bc52"><span class="section-number-2">2.</span> 测验结果</h2>
+<div class="outline-text-2" id="text-2">
 <table>
 
 
@@ -274,7 +285,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-07</p>
+<p class="date">Created: 2023-09-13</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
