--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-12 -->
+<!-- 2023-09-13 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>C♯ 语言</title>
@@ -36,7 +36,7 @@
 </p>
 
 
-<figure id="org1c68c1b">
+<figure id="org3134360">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
@@ -50,12 +50,25 @@
 <li>编译 (使用 csc 在命令行下进行)</li>
 <li>运行 (机器文件，内含指令代码和各种二进制数据)</li>
 </ul>
+
+<p>
+基本规则:
+</p>
+<ul class="org-ul">
+<li>程序结构:
+命名空间 (namespace)
+  类型 (class)
+    字段
+    方法 (Main)
+    方法</li>
+<li>学会偷懒 (变量、方法)</li>
+</ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-12</p>
+<p class="date">Created: 2023-09-13</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
