best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-13 -->
+<!-- 2023-09-19 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -22,14 +22,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbf22b8c">1. 测验结果</a></li>
+<li><a href="#orgaf9a146">1. 信息</a></li>
+<li><a href="#orgbf22b8c">2. 测验结果</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-orgbf22b8c" class="outline-2">
-<h2 id="orgbf22b8c"><span class="section-number-2">1.</span> 测验结果</h2>
+
+
+<section id="outline-container-orgaf9a146" class="outline-2">
+<h2 id="orgaf9a146"><span class="section-number-2">1.</span> 信息</h2>
 <div class="outline-text-2" id="text-1">
+<ul class="org-ul">
+<li>学习委员: 黄军帮</li>
+</ul>
+</div>
+</section>
+
+<section id="outline-container-orgbf22b8c" class="outline-2">
+<h2 id="orgbf22b8c"><span class="section-number-2">2.</span> 测验结果</h2>
+<div class="outline-text-2" id="text-2">
 <table>
 
 
@@ -262,22 +274,22 @@
 
 <tr>
 <td class="org-left">郭小龙</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">车斌涛</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">何锦晖</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
 <td class="org-left">魏坤</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">车斌涛</td>
+<td class="org-right">-</td>
+</tr>
+
+<tr>
+<td class="org-left">何锦晖</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
@@ -304,7 +316,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-13</p>
+<p class="date">Created: 2023-09-19</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
