--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-13 -->
+<!-- 2023-09-19 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 192</title>
@@ -264,12 +264,12 @@
 
 <tr>
 <td class="org-left">谢晓中</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">-</td>
 </tr>
 
 <tr>
 <td class="org-left">陈颖聪</td>
-<td class="org-left">&#xa0;</td>
+<td class="org-left">-</td>
 </tr>
 </tbody>
 </table>
@@ -285,7 +285,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-13</p>
+<p class="date">Created: 2023-09-19</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
