--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-09-19 -->
+<!-- 2023-11-02 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 191</title>
@@ -48,131 +48,158 @@
 <col  class="org-left">
 
 <col  class="org-right">
+
+<col  class="org-right">
 </colgroup>
 <thead>
 <tr>
 <th scope="col" class="org-left">姓名</th>
 <th scope="col" class="org-right">2023-09-11</th>
+<th scope="col" class="org-right">2023-10-30</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td class="org-left">陈嘉鹏</td>
 <td class="org-right">1</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">廖哲</td>
 <td class="org-right">2</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">刘宁</td>
 <td class="org-right">3</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">秦铭杉</td>
 <td class="org-right">4</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">黄佳鹏</td>
 <td class="org-right">5</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">覃宇江</td>
 <td class="org-right">6</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">唐瑞钦</td>
 <td class="org-right">7</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">曾世强</td>
 <td class="org-right">8</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">魏智锋</td>
 <td class="org-right">9</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">刘燃东</td>
 <td class="org-right">10</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">陈述亮</td>
 <td class="org-right">11</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">李境松</td>
 <td class="org-right">12</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">刘志豪</td>
 <td class="org-right">13</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">韦海永</td>
 <td class="org-right">14</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">叶子超</td>
 <td class="org-right">15</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">张翔宇</td>
 <td class="org-right">16</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">吴志挥</td>
 <td class="org-right">17</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">陈子健</td>
 <td class="org-right">18</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">刁扬春</td>
 <td class="org-right">19</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">潘嘉豪</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">朱荣如</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">岑宇森</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">林宝荣</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">曾凯</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 </tbody>
@@ -183,13 +210,14 @@
 </p>
 <ul class="org-ul">
 <li>2023-09-11, 创建 helloworld、编译、运行，独立完成</li>
+<li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
 </ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-09-19</p>
+<p class="date">Created: 2023-11-02</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
