best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-11-02 -->
+<!-- 2023-11-06 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 191</title>
@@ -62,103 +62,103 @@
 <tr>
 <td class="org-left">陈嘉鹏</td>
 <td class="org-right">1</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">2</td>
 </tr>
 
 <tr>
 <td class="org-left">廖哲</td>
 <td class="org-right">2</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">18</td>
 </tr>
 
 <tr>
 <td class="org-left">刘宁</td>
 <td class="org-right">3</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">7</td>
 </tr>
 
 <tr>
 <td class="org-left">秦铭杉</td>
 <td class="org-right">4</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">14</td>
 </tr>
 
 <tr>
 <td class="org-left">黄佳鹏</td>
 <td class="org-right">5</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">13</td>
 </tr>
 
 <tr>
 <td class="org-left">覃宇江</td>
 <td class="org-right">6</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">4</td>
 </tr>
 
 <tr>
 <td class="org-left">唐瑞钦</td>
 <td class="org-right">7</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">1</td>
 </tr>
 
 <tr>
 <td class="org-left">曾世强</td>
 <td class="org-right">8</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">6</td>
 </tr>
 
 <tr>
 <td class="org-left">魏智锋</td>
 <td class="org-right">9</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">12</td>
 </tr>
 
 <tr>
 <td class="org-left">刘燃东</td>
 <td class="org-right">10</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">17</td>
 </tr>
 
 <tr>
 <td class="org-left">陈述亮</td>
 <td class="org-right">11</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">16</td>
 </tr>
 
 <tr>
 <td class="org-left">李境松</td>
 <td class="org-right">12</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">15</td>
 </tr>
 
 <tr>
 <td class="org-left">刘志豪</td>
 <td class="org-right">13</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">3</td>
 </tr>
 
 <tr>
 <td class="org-left">韦海永</td>
 <td class="org-right">14</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">5</td>
 </tr>
 
 <tr>
 <td class="org-left">叶子超</td>
 <td class="org-right">15</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">8</td>
 </tr>
 
 <tr>
 <td class="org-left">张翔宇</td>
 <td class="org-right">16</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">10</td>
 </tr>
 
 <tr>
 <td class="org-left">吴志挥</td>
 <td class="org-right">17</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">9</td>
 </tr>
 
 <tr>
@@ -176,7 +176,7 @@
 <tr>
 <td class="org-left">潘嘉豪</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">6</td>
 </tr>
 
 <tr>
@@ -188,7 +188,7 @@
 <tr>
 <td class="org-left">岑宇森</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">19</td>
 </tr>
 
 <tr>
@@ -200,7 +200,7 @@
 <tr>
 <td class="org-left">曾凯</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">11</td>
 </tr>
 </tbody>
 </table>
@@ -217,7 +217,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-11-02</p>
+<p class="date">Created: 2023-11-06</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
