--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-11-02 -->
+<!-- 2023-11-06 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -239,7 +239,7 @@
 <tr>
 <td class="org-left">肖毅良</td>
 <td class="org-right">24</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">29</td>
 </tr>
 
 <tr>
@@ -407,7 +407,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-11-02</p>
+<p class="date">Created: 2023-11-06</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
