--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-11-02 -->
+<!-- 2023-11-07 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 192</title>
@@ -63,7 +63,7 @@
 <tr>
 <td class="org-left">李吉</td>
 <td class="org-left">1</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">12</td>
 </tr>
 
 <tr>
@@ -105,7 +105,7 @@
 <tr>
 <td class="org-left">何华为</td>
 <td class="org-left">8</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">7</td>
 </tr>
 
 <tr>
@@ -117,7 +117,7 @@
 <tr>
 <td class="org-left">肖义珥</td>
 <td class="org-left">10</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">11</td>
 </tr>
 
 <tr>
@@ -165,13 +165,13 @@
 <tr>
 <td class="org-left">古远东</td>
 <td class="org-left">18</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">8</td>
 </tr>
 
 <tr>
 <td class="org-left">黄可彬</td>
 <td class="org-left">19</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">9</td>
 </tr>
 
 <tr>
@@ -315,7 +315,7 @@
 <tr>
 <td class="org-left">陈颖聪</td>
 <td class="org-left">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">10</td>
 </tr>
 </tbody>
 </table>
@@ -332,7 +332,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-11-02</p>
+<p class="date">Created: 2023-11-07</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
